Session 6, refactored code into a Module and updated views

--- a/session6/challenge/1_build_an_app/Views/encrypted.erb
+++ b/session6/challenge/1_build_an_app/Views/encrypted.erb
@@ -1,7 +1,3 @@
 <p>
-<% result = String.new %>
-<% @message.each_char do |char| %>
-  <% result << (char.ord + 3).chr %>
-<% end %>
-<%= result %>
+<%= @encrypted %>
 </p>
