--- a/session6/challenge/1_build_an_app/Views/decrypted.erb
+++ b/session6/challenge/1_build_an_app/Views/decrypted.erb
@@ -1,7 +1,3 @@
 <p>
-<% result = String.new %>
-<% @encrypted_message.each_char do |char| %>
-  <% result << (char.ord - 3).chr %>
-<% end %>
-<%= result %>
+<%= @decrypted %>
 </p>
