Session 6, update Gemfile to pass tests and add Header to layout view.

--- a/session6/challenge/1_build_an_app/Views/layout.erb
+++ b/session6/challenge/1_build_an_app/Views/layout.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Message Scrambler</title>
+    <title>Caesar Cipher</title>
   </head>
   <body>
-    <!-- Use yield where you want content to get rendered -->
+    <h1> Caesar Cipher </h1>
     <%= yield %>
   </body>
 </html>
